@@ -4,7 +4,8 @@
 - update to rio-tiler-crs 3.0b.1 (rio-tiler 2.0b2)
 - STAC is now added by default because there is no need for external module.
 - Pin fastapi version to 0.60.1
-- Remove titiler.core in favor of starlette settings (#58, author @geospatial-jeff)
+- Remove titiler.core in favor of starlette settings (#55, author @geospatial-jeff)
+- Add fastapi exception handlers (#56, author @geospatial-jeff)
 
 2.1.2 (2020-06-24)
 ------------------
